# ffi-ext

./: .cirrus.yml  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  malloc_cstring.rs  unix.rs  windows.rs
