[package]
name = "ffi-ext"
version = "0.1.0"
edition = "2018"

description = "Extension methods"
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
repository = "https://github.com/cptpcrd/ffi-ext"

[features]
default = ["malloc-cstring"]

malloc-cstring = ["libc"]

[dependencies]
libc = { version = "0.2", default-features = false, optional = true }
