[package]
name = "ffi-ext"
version = "0.1.0"
edition = "2018"

description = "Extension methods for types in std::ffi"
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
repository = "https://github.com/cptpcrd/ffi-ext"

[features]
default = ["memchr"]

[dependencies]

[target.'cfg(unix)'.dependencies]
memchr = { version = "2.3", optional = true }
twoway = { version = "0.2", optional = true }
